<resources>
    <string name="app_name">Messages manager</string>
    <string name="channel_name">channel_1</string>
    <string name="channel_description">channel_1</string>
    <string name="contacts_text_view_text">Contacts</string>
    <string name="azimuth_text_view_text">Azimuth:</string>
    <string name="scanner_checkbox_text">Attach</string>
    <string name="scan_button_text">Scan</string>
    <string name="send_button_text">Send</string>
    <string name="message_text_edit_text_hint">Message Text</string>
    <string name="hone_number_edit_text_hint">Phone number</string>
    <string name="message_manager_text_view_text">Messages Manager</string>
    <string name="azimuth_checkbox_text">Attach</string>
    <string name="message_text_view_text">Messages</string>
    <string name="display_messages_text">Display messages</string>
    <string name="message_text">Sent messages</string>
</resources>