<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/sms_manager_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sms_manager_text_view_text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_number_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_manager_text_view"
            android:hint="@string/hone_number_edit_text_hint"
            android:inputType="phone" />

        <EditText
            android:id="@+id/sms_text_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone_number_edit_text"
            android:hint="@string/sms_text_edit_text_hint"
            android:inputType="text|textMultiLine" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_text_edit_text"
            android:layout_centerHorizontal="true"
            android:onClick="sendSMS"
            android:text="@string/send_button_text" />

        <Button
            android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/send_button"
            android:layout_centerHorizontal="true"
            android:onClick="scan"
            android:text="@string/scan_button_text" />

        <CheckBox
            android:id="@+id/scanner_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/scan_button"
            android:layout_alignParentEnd="true"
            android:text="@string/scanner_checkbox_text" />

        <TextView
            android:id="@+id/azimuth_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/scan_button"
            android:paddingTop="30dp"
            android:text="@string/azimuth_text_view_text"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/azimuth_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/azimuth_text_view"
            android:layout_alignParentEnd="true"
            android:text="@string/azimuth_checkbox_text" />

        <TextView
            android:id="@+id/sms_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/azimuth_checkbox"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/sms_text_view_text"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sms_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/sms_text_view" />

        <TextView
            android:id="@+id/contacts_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sms_recycler_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/contacts_text_view_text"
            android:textSize="22sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contacts_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/contacts_text_view" />

    </RelativeLayout>
</ScrollView>